Global Error Handler

--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ MQTT_BROKER_URL=mqtt://103.1.238.175:1883
 MQTT_USER=test
 MQTT_PASS=testadmin
 MQTT_TOPIC=factory/machine/data
+
+
+NODE_ENV=product
